# oped-back

./: .env.example  Cargo.toml
src/: main.rs
src/configurators/: mod.rs
src/contollers/: mod.rs
src/core/user/: models.rs  repository.rs  service.rs
src/deprecated/: mod.rs
src/infrastructure/: constants.rs  controller.rs  mod.rs  models.rs  utils.rs
src/infrastructure/user/: controllers.rs  models.rs  repository.rs  service.rs
src/models/: mod.rs
src/repositories/: mod.rs
src/services/: mod.rs
