[package]
name = "anime_expert"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.3.1", features = ["rustls"] }
serde = { version = "1.0.163", features = ["derive"] }
dotenv = { version = "0.15.0" }
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "json"] }
async-trait = { version = "0.1.68" }
sha256 = { version = "1.1.3" }
rand = { version = "0.8.5" }
jwt = { version = "0.16.0" }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.6" }